[gd_scene load_steps=9 format=3 uid="uid://dj5oyioly1dmv"]

[ext_resource type="PackedScene" uid="uid://1xxjeshkifye" path="res://models/Capsule/Capsule.glb" id="1_id0xc"]
[ext_resource type="Script" path="res://entities/Capsule/Capsule.gd" id="2_mo25g"]
[ext_resource type="AudioStream" uid="uid://brpg4jsbqwrlu" path="res://sounds/Genesis 32X SCD - Sonic the Hedgehog - Sound Effects/Sonic 1/S1_B1.wav" id="3_ax753"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1pmdf"]
data = PackedVector3Array(-1.6494, 5.6999, -0.9523, 0, 7.1678, -2.4417, -2.1146, 7.1678, -1.2209, -1.6494, 5.6999, -0.9523, 0, 5.6999, -1.9046, 0, 7.1678, -2.4417, -1.6494, 5.6999, 0.9522, -2.1146, 7.1678, -1.2209, -2.1146, 7.1678, 1.2208, -1.6494, 5.6999, 0.9522, -1.6494, 5.6999, -0.9523, -2.1146, 7.1678, -1.2209, 0, 5.6999, 1.9045, -2.1146, 7.1678, 1.2208, 0, 7.1678, 2.4417, 0, 5.6999, 1.9045, -1.6494, 5.6999, 0.9522, -2.1146, 7.1678, 1.2208, 1.6494, 5.6999, 0.9522, 0, 7.1678, 2.4417, 2.1146, 7.1678, 1.2208, 1.6494, 5.6999, 0.9522, 0, 5.6999, 1.9045, 0, 7.1678, 2.4417, 1.6494, 5.6999, -0.9523, 2.1146, 7.1678, 1.2208, 2.1146, 7.1678, -1.2209, 1.6494, 5.6999, -0.9523, 1.6494, 5.6999, 0.9522, 2.1146, 7.1678, 1.2208, 0, 5.6999, -1.9046, 2.1146, 7.1678, -1.2209, 0, 7.1678, -2.4417, 0, 5.6999, -1.9046, 1.6494, 5.6999, -0.9523, 2.1146, 7.1678, -1.2209, 0, 7.1678, -2.4417, 1.6494, 8.6357, -0.9523, 0, 8.6357, -1.9046, 0, 7.1678, -2.4417, 2.1146, 7.1678, -1.2209, 1.6494, 8.6357, -0.9523, 2.1146, 7.1678, -1.2209, 1.6494, 8.6357, 0.9522, 1.6494, 8.6357, -0.9523, 2.1146, 7.1678, -1.2209, 2.1146, 7.1678, 1.2208, 1.6494, 8.6357, 0.9522, 2.1146, 7.1678, 1.2208, 0, 8.6357, 1.9045, 1.6494, 8.6357, 0.9522, 2.1146, 7.1678, 1.2208, 0, 7.1678, 2.4417, 0, 8.6357, 1.9045, 0, 7.1678, 2.4417, -1.6494, 8.6357, 0.9522, 0, 8.6357, 1.9045, 0, 7.1678, 2.4417, -2.1146, 7.1678, 1.2208, -1.6494, 8.6357, 0.9522, -2.1146, 7.1678, 1.2208, -1.6494, 8.6357, -0.9523, -1.6494, 8.6357, 0.9522, -2.1146, 7.1678, 1.2208, -2.1146, 7.1678, -1.2209, -1.6494, 8.6357, -0.9523, -2.1146, 7.1678, -1.2209, 0, 8.6357, -1.9046, -1.6494, 8.6357, -0.9523, -2.1146, 7.1678, -1.2209, 0, 7.1678, -2.4417, 0, 8.6357, -1.9046)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_8hlnh"]
data = PackedVector3Array(-0.866, 5.3084, -0.5, 0.866, 5.3084, -0.5, 0, 5.3084, -1, 0.866, 5.3084, -0.5, 0, 5.3084, 1, 0.866, 5.3084, 0.5, 0, 5.3084, 1, -0.866, 5.3084, -0.5, -0.866, 5.3084, 0.5, 0.866, 5.3084, -0.5, -0.866, 5.3084, -0.5, 0, 5.3084, 1, 0.866, 9.0291, -0.5, -0.866, 9.0291, -0.5, 0, 9.0291, -1, -0.866, 9.0291, -0.5, 0, 9.0291, 1, -0.866, 9.0291, 0.5, 0, 9.0291, 1, 0.866, 9.0291, -0.5, 0.866, 9.0291, 0.5, -0.866, 9.0291, -0.5, 0.866, 9.0291, -0.5, 0, 9.0291, 1, 0, 5.3084, -1.0001, 1.66, 5.6994, -0.9585, 0, 5.6994, -1.9168, 0, 5.3084, -1.0001, 0.866, 5.3084, -0.5, 1.66, 5.6994, -0.9585, 0.866, 5.3084, -0.5, 1.66, 5.6994, 0.9584, 1.66, 5.6994, -0.9585, 0.866, 5.3084, -0.5, 0.866, 5.3084, 0.5, 1.66, 5.6994, 0.9584, 0.866, 5.3084, 0.5, 0, 5.6994, 1.9168, 1.66, 5.6994, 0.9584, 0.866, 5.3084, 0.5, 0, 5.3084, 1, 0, 5.6994, 1.9168, 0, 5.3084, 1, -1.66, 5.6994, 0.9584, 0, 5.6994, 1.9168, 0, 5.3084, 1, -0.8661, 5.3084, 0.5, -1.66, 5.6994, 0.9584, -0.8661, 5.3084, 0.5, -1.66, 5.6994, -0.9585, -1.66, 5.6994, 0.9584, -0.8661, 5.3084, 0.5, -0.8661, 5.3084, -0.5, -1.66, 5.6994, -0.9585, -0.8661, 5.3084, -0.5, 0, 5.6994, -1.9168, -1.66, 5.6994, -0.9585, -0.8661, 5.3084, -0.5, 0, 5.3084, -1.0001, 0, 5.6994, -1.9168, 0, 9.0291, -1.0001, -1.66, 8.638, -0.9585, 0, 8.638, -1.9168, 0, 9.0291, -1.0001, -0.8661, 9.0291, -0.5, -1.66, 8.638, -0.9585, -0.8661, 9.0291, -0.5, -1.66, 8.638, 0.9584, -1.66, 8.638, -0.9585, -0.8661, 9.0291, -0.5, -0.8661, 9.0291, 0.5, -1.66, 8.638, 0.9584, -0.8661, 9.0291, 0.5, 0, 8.638, 1.9168, -1.66, 8.638, 0.9584, -0.8661, 9.0291, 0.5, 0, 9.0291, 1, 0, 8.638, 1.9168, 0, 9.0291, 1, 1.66, 8.638, 0.9584, 0, 8.638, 1.9168, 0, 9.0291, 1, 0.866, 9.0291, 0.5, 1.66, 8.638, 0.9584, 0.866, 9.0291, 0.5, 1.66, 8.638, -0.9585, 1.66, 8.638, 0.9584, 0.866, 9.0291, 0.5, 0.866, 9.0291, -0.5, 1.66, 8.638, -0.9585, 0.866, 9.0291, -0.5, 0, 8.638, -1.9168, 1.66, 8.638, -0.9585, 0.866, 9.0291, -0.5, 0, 9.0291, -1.0001, 0, 8.638, -1.9168)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_v0mr2"]
data = PackedVector3Array(-8.8032, -15.2468, -1.8967, 17.6055, -0.0002, -1.8967, 8.8026, -15.2468, -1.8967, 17.6055, -0.0002, -1.8967, -8.8032, 15.2468, -1.8967, 8.8026, 15.2464, -1.8967, -8.8032, 15.2468, -1.8967, -8.8032, -15.2468, -1.8967, -17.6055, -0.0002, -1.8967, 17.6055, -0.0002, -1.8967, -8.8032, -15.2468, -1.8967, -8.8032, 15.2468, -1.8967, 8.8026, -15.2468, -1.8968, 17.6055, -0.0002, -7.6889, 8.8026, -15.2468, -7.6889, 8.8026, -15.2468, -1.8968, 17.6055, -0.0002, -1.8968, 17.6055, -0.0002, -7.6889, 17.6055, -0.0002, -1.8968, 8.8026, 15.2464, -7.6889, 17.6055, -0.0002, -7.6889, 17.6055, -0.0002, -1.8968, 8.8026, 15.2464, -1.8968, 8.8026, 15.2464, -7.6889, 8.8026, 15.2464, -1.8968, -8.8032, 15.2464, -7.6889, 8.8026, 15.2464, -7.6889, 8.8026, 15.2464, -1.8968, -8.8032, 15.2468, -1.8968, -8.8032, 15.2464, -7.6889, -8.8032, 15.2468, -1.8968, -17.6055, -0.0002, -7.6889, -8.8032, 15.2464, -7.6889, -8.8032, 15.2468, -1.8968, -17.6055, -0.0002, -1.8968, -17.6055, -0.0002, -7.6889, -17.6055, -0.0002, -1.8968, -8.8032, -15.2468, -7.6889, -17.6055, -0.0002, -7.6889, -17.6055, -0.0002, -1.8968, -8.8032, -15.2468, -1.8967, -8.8032, -15.2468, -7.6889, -8.8032, -15.2468, -1.8967, 8.8026, -15.2468, -7.6889, -8.8032, -15.2468, -7.6889, -8.8032, -15.2468, -1.8967, 8.8026, -15.2468, -1.8968, 8.8026, -15.2468, -7.6889, -0.0003, -0.0002, -7.6889, 8.8026, -15.2468, -7.6889, 17.6055, -0.0002, -7.6889, -0.0003, -0.0002, -7.6889, 17.6055, -0.0002, -7.6889, 8.8026, 15.2468, -7.6889, -0.0003, -0.0002, -7.6889, 8.8026, 15.2468, -7.6889, -8.8032, 15.2468, -7.6889, -0.0003, -0.0002, -7.6889, -8.8032, 15.2468, -7.6889, -17.6055, -0.0002, -7.6889, -0.0003, -0.0002, -7.6889, -17.6055, -0.0002, -7.6889, -8.8032, -15.2468, -7.6889, -0.0003, -0.0002, -7.6889, -8.8032, -15.2468, -7.6889, 8.8026, -15.2468, -7.6889, 19.8832, -7.6568, 0.0539, 13.5324, -3.6562, -3.0363, 19.0603, -7.9369, -3.0363, 19.8832, -7.6568, 0.0539, 15.8158, -3.9515, 0.0539, 13.5324, -3.6562, -3.0363, -3.311, 21.0476, 0.0539, -3.6004, 13.5471, -3.0363, -2.6569, 20.4753, -3.0363, -3.311, 21.0476, 0.0539, -4.4863, 15.6722, 0.0539, -3.6004, 13.5471, -3.0363, 16.4032, -12.5387, -3.0363, 11.3292, -11.7215, 0.0539, 16.5719, -13.391, 0.054, 16.4032, -12.5387, -3.0363, 9.9323, -9.8917, -3.0363, 11.3292, -11.7215, 0.0539, 16.5719, -13.391, 0.054, 19.0603, -7.9369, -3.0363, 16.4032, -12.5387, -3.0363, 16.5719, -13.391, 0.054, 19.8832, -7.6568, 0.0539, 19.0603, -7.9369, -3.0363, 2.6562, 20.4753, -3.0363, 4.4857, 15.6722, 0.0539, 3.3104, 21.0476, 0.0539, 2.6562, 20.4753, -3.0363, 3.5998, 13.5471, -3.0363, 4.4857, 15.6722, 0.0539, 3.3104, 21.0476, 0.0539, -2.6569, 20.4753, -3.0363, 2.6562, 20.4753, -3.0363, 3.3104, 21.0476, 0.0539, -3.311, 21.0476, 0.0539, -2.6569, 20.4753, -3.0363, -19.8832, -7.6568, 0.0539, -16.4038, -12.5387, -3.0363, -19.0609, -7.9369, -3.0363, -19.8832, -7.6568, 0.0539, -16.5725, -13.391, 0.054, -16.4038, -12.5387, -3.0363, -19.0609, -7.9369, -3.0363, -15.8164, -3.9515, 0.0539, -19.8832, -7.6568, 0.0539, -19.0609, -7.9369, -3.0363, -13.533, -3.6562, -3.0363, -15.8164, -3.9515, 0.0539, -16.5725, -13.391, 0.054, -9.9329, -9.8917, -3.0363, -16.4038, -12.5387, -3.0363, -16.5725, -13.391, 0.054, -11.3298, -11.7215, 0.0539, -9.9329, -9.8917, -3.0363, -16.404, -12.5385, -3.0364, -9.9327, -9.8918, -3.0364, -10.4009, -9.0812, -4.7051, -19.0606, -7.9372, -3.0364, -10.4009, -9.0812, -4.7051, -13.0651, -4.4668, -4.7051, -19.0606, -7.9372, -3.0364, -16.404, -12.5385, -3.0364, -10.4009, -9.0812, -4.7051, 9.9321, -9.8918, -3.0364, 16.4034, -12.5385, -3.0363, 10.4004, -9.0812, -4.7051, 3.5998, 13.5471, -3.0364, 2.6563, 20.4753, -3.0364, 2.6639, 13.5471, -4.7051, 2.6563, 20.4753, -3.0364, -2.6644, 13.5471, -4.7051, 2.6639, 13.5471, -4.7051, 2.6563, 20.4753, -3.0364, -2.6569, 20.4753, -3.0364, -2.6644, 13.5471, -4.7051, -2.6569, 20.4753, -3.0364, -3.6004, 13.5471, -3.0364, -2.6644, 13.5471, -4.7051, 16.4034, -12.5385, -3.0363, 13.0645, -4.4668, -4.7051, 10.4004, -9.0812, -4.7051, 16.4034, -12.5385, -3.0363, 19.0606, -7.9372, -3.0364, 13.0645, -4.4668, -4.7051, 19.0606, -7.9372, -3.0364, 13.5322, -3.6562, -3.0364, 13.0645, -4.4668, -4.7051, -13.5328, -3.6562, -3.0364, -19.0606, -7.9372, -3.0364, -13.0651, -4.4668, -4.7051, 6.2302, 6.2302, -62.077, -6.2302, 6.2302, -66.5606, 6.2302, 6.2302, -66.5606, 6.2302, 6.2302, -62.077, -6.2302, 6.2302, -62.077, -6.2302, 6.2302, -66.5606, -6.2302, -27.8422, -62.077, 6.2302, -27.8422, -66.5606, -6.2302, -27.8422, -66.5606, -6.2302, -27.8422, -62.077, 6.2302, -27.8422, -62.077, 6.2302, -27.8422, -66.5606, -0.0001, -17.8261, -0.0222, -5.3955, -27.1715, -61.8019, -0.0001, -17.8261, -61.8019, -0.0001, -17.8261, -0.0222, -5.3955, -27.1715, -0.0222, -5.3955, -27.1715, -61.8019, -6.2302, -27.8422, -62.077, 6.2302, 6.2302, -62.077, 6.2302, -27.8422, -62.077, -6.2302, -27.8422, -62.077, -6.2302, 6.2302, -62.077, 6.2302, 6.2302, -62.077, -6.2302, 6.2302, -62.077, -6.2302, -27.8422, -66.5606, -6.2302, 6.2302, -66.5606, -6.2302, 6.2302, -62.077, -6.2302, -27.8422, -62.077, -6.2302, -27.8422, -66.5606, -5.3955, -27.1715, -0.0222, 5.3953, -27.1715, -61.8019, -5.3955, -27.1715, -61.8019, -5.3955, -27.1715, -0.0222, 5.3953, -27.1715, -0.0222, 5.3953, -27.1715, -61.8019, 6.2302, -27.8422, -62.077, 6.2302, 6.2302, -66.5606, 6.2302, -27.8422, -66.5606, 6.2302, -27.8422, -62.077, 6.2302, 6.2302, -62.077, 6.2302, 6.2302, -66.5606, 5.3953, -27.1715, -0.0222, -0.0001, -17.8261, -61.8019, 5.3953, -27.1715, -61.8019, 5.3953, -27.1715, -0.0222, -0.0001, -17.8261, -0.0222, -0.0001, -17.8261, -61.8019, 6.2302, -27.8422, -66.5606, -6.2302, 6.2302, -66.5606, -6.2302, -27.8422, -66.5606, 6.2302, -27.8422, -66.5606, 6.2302, 6.2302, -66.5606, -6.2302, 6.2302, -66.5606, 0, -3.7287, -54.962, 3.2292, 1.8643, -62.4194, 0, -3.7287, -62.4194, 0, -3.7287, -54.962, 3.2292, 1.8644, -54.962, 3.2292, 1.8643, -62.4194, 3.2292, 1.8644, -54.962, -3.2292, 1.8643, -62.4194, 3.2292, 1.8643, -62.4194, 3.2292, 1.8644, -54.962, -3.2292, 1.8644, -54.962, -3.2292, 1.8643, -62.4194, -3.2292, 1.8644, -54.962, 0, -3.7287, -62.4194, -3.2292, 1.8643, -62.4194, -3.2292, 1.8644, -54.962, 0, -3.7287, -54.962, 0, -3.7287, -62.4194)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7rcy2"]
radius = 1.6

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bie1i"]
radius = 1.6

[node name="Capsule" instance=ExtResource("1_id0xc")]
script = ExtResource("2_mo25g")

[node name="StaticBody3D" type="StaticBody3D" parent="CapsuleCore" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CapsuleCore/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_1pmdf")

[node name="StaticBody3D" type="StaticBody3D" parent="CapsuleCoreBase" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CapsuleCoreBase/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_8hlnh")

[node name="StaticBody3D" type="StaticBody3D" parent="CapsuleBase" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CapsuleBase/StaticBody3D" index="0"]
shape = SubResource("ConcavePolygonShape3D_v0mr2")

[node name="Area3D" type="Area3D" parent="." index="4"]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.90075, 0)
shape = SubResource("CylinderShape3D_7rcy2")

[node name="StaticBody3D" type="StaticBody3D" parent="." index="5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.52366, 0)
shape = SubResource("CylinderShape3D_bie1i")

[node name="SndButtonPress" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource("3_ax753")
bus = &"SoundEffectsNonDiagetic"

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
